...

                <TextView
                    style="@style/Widget.Akin.FormLabel"
                    android:text="@string/field_card_type" />

                <LinearLayout
                    android:id="@+id/bank_card_type_selector"
                    style="@style/Widget.Akin.FormSelectRow">

                    <TextView
                        android:id="@+id/bank_card_type_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:ellipsize="end"
...

                <TextView
                    style="@style/Widget.Akin.FormLabel"
                    android:text="@string/field_card_network" />

                <LinearLayout
                    android:id="@+id/bank_card_network_selector"
                    style="@style/Widget.Akin.FormSelectRow">

                    <TextView
                        android:id="@+id/bank_card_network_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:ellipsize="end"
...

                <TextView
                    style="@style/Widget.Akin.FormLabel"
                    android:text="@string/field_card_number" />

                <EditText
                    android:id="@+id/bank_card_number_field"
                    style="@style/Widget.Akin.FormInput"
                    android:hint="@string/hint_card_number"
                    android:inputType="number"
                    android:digits="0123456789 "
                    android:maxLength="19" />

...
