...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/field_username"
                        android:textAppearance="@style/TextAppearance.Akin.BodyMuted" />

                    <EditText
                        android:id="@+id/social_account_username_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/hint_username"
                        android:textColorHint="@color/hint_text"
                        android:textAppearance="@style/TextAppearance.Akin.InputValue"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/field_password"
                        android:textAppearance="@style/TextAppearance.Akin.BodyMuted" />

                    <EditText
                        android:id="@+id/social_account_password_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/mask_password"
                        android:textColorHint="@color/hint_text"
                        android:textAppearance="@style/TextAppearance.Akin.InputValue"
...
